prevent cropped permalinks

--- a/src/component/Permalink/Permalink.css
+++ b/src/component/Permalink/Permalink.css
@@ -8,7 +8,7 @@
 }
 
 .permalink input {
-  margin: 0 20px;
+  margin: 0 5px;
   flex: 1;
   border: solid 1px var(--baseColor);
   border-radius: 2px;
